# papillon-examples

./: CMakeLists.txt  README.md
FaceLogServer/: CMakeLists.txt  README.md  doFaceLogClient.cpp  doFaceLogServer.cpp
MemoryStream/: CMakeLists.txt  README.md  doMemoryStream.cpp
MetaData/: CMakeLists.txt  README.md  doMetaDataDetector.cpp
